Fixed up media queries so cms isn't so squashed on smaller screens

--- a/adminUI/sass/adminstyle.scss
+++ b/adminUI/sass/adminstyle.scss
@@ -54,7 +54,7 @@ h1 {
     cursor: default;
   }
 
-} 
+}
 
 .container {
   width: 70%;
@@ -62,6 +62,11 @@ h1 {
   padding-bottom: 20px;
 }
 
+@media screen and (max-width: 1500px) {
+  .container, .nav, h1 {
+    width: 97%;
+  }
+}
  
 @media screen and (min-width: 600px) {
   .nav li {
